# InDeX

./: .env.example  .gitignore  CONVERSATION.md  Cargo.toml  E2E_TESTING_GUIDE.md  PITCH.md  README.md
.cargo/: config.toml
.initia/: submission.json
backend/: package-lock.json  package.json  start.sh
backend/src/: chain.ts  config.ts  e2e-test.ts  index.ts  keeper.ts  mongo.ts
backend/src/routes/: apy.ts  governance.ts  health.ts  lending.ts  leverage.ts  liquidity.ts  price.ts  protocol.ts  restaking.ts  stats.ts  validators.ts  withdrawals.ts
backend/src/services/: eventBus.ts  eventListener.ts  feeHarvester.ts  l1StakingHarvester.ts  leverageEngine.ts  liquidationBot.ts  metricsCron.ts  oracleUpdater.ts  priceFeed.ts  restakingEngine.ts  rewardEngine.ts  riskEngine.ts  withdrawalMonitor.ts
contracts/governance/: Cargo.toml
contracts/governance/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/initx-token/: Cargo.toml
contracts/initx-token/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/lending/: Cargo.toml
contracts/lending/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/lp-pool/: Cargo.toml
contracts/lp-pool/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: contract.rs  error.rs  msg.rs  state.rs
deployments/: testnet.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  (+3 more)
scripts/: e2e-test.sh  package-lock.json  package.json  tsconfig.json
scripts/src/: build.ts  deploy.ts  e2e-real-yield.ts  migrate-real-yield.ts  redeploy-all.ts
(+16 files in other folders)
