[workspace]
members = [
  "contracts/initx-token",
  "contracts/staking",
  "contracts/lp-pool",
  "contracts/lending",
  "contracts/governance",
  "contracts/packages/shared",
]
resolver = "2"

[workspace.dependencies]
cosmwasm-std = "2.2"
cosmwasm-schema = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
cw20 = "2.0"
cw20-base = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"
shared = { path = "contracts/packages/shared" }
initx-token = { path = "contracts/initx-token" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
